[metadata]
name = pre_commit_hooks
version = 2.3
description = Some hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/boidolr/pre-commit-hooks
author = Raphael Boidol
author_email = boidolr@users.noreply.github.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.6.1
tests_require =
    pre-commit
    pytest
    pytest-flake8
    pytest-mypy
    autocorrect==2.0.0
    pillow==7.2.0
    scour==0.38

[options.entry_points]
console_scripts =
    check-ng-lint = hooks.check_ng_lint:main
    optimize-image = hooks.optimize_image:main
    format-message = hooks.format_message:main
    search-replace = hooks.search_replace:main
    spellcheck-message = hooks.spellcheck_message:main
    prepare-message = hooks.prepare_message:main
    restore-message = hooks.restore_message:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[options.extras_require]
all =
    autocorrect==2.0.0
    pillow==7.2.0
    scour==0.38
image =
    pillow==7.2.0
    scour==0.38
spellcheck =
    autocorrect==2.0.0

[aliases]
test=pytest

[tool:pytest]
addopts =
    --flake8
    --mypy

[flake8]
max-line-length = 120

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
no_implicit_optional = True

[mypy-tests.*]
disallow_untyped_defs = False

[mypy-setuptools]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-PIL]
ignore_missing_imports = True

[mypy-scour]
ignore_missing_imports = True

[mypy-autocorrect]
ignore_missing_imports = True

[mypy-pre_commit.*]
ignore_missing_imports = True
