[metadata]
name = commit_hooks
version = 3.5.3
description = Some hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/boidolr/commit-hooks
author = Raphael Boidol
author_email = boidolr@users.noreply.github.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    autocorrect==2.5.0
    pillow==8.2.0
    pillow-avif-plugin==1.1.0
    scour==0.38.2
python_requires = >=3.6.1, !=3.10.*

[options.extras_require]
tests =
    black
    pre-commit
    pytest
    pytest-clarity
    pytest-cov
    pytest-flake8
    pytest-mypy

[options.entry_points]
console_scripts =
    check-ng-lint = hooks.check_ng_lint:main
    optimize-avif = hooks.optimize_avif:main
    optimize-jpg = hooks.optimize_jpg:main
    optimize-png = hooks.png:main
    optimize-svg = hooks.optimize_svg:main
    optimize-webp = hooks.optimize_webp:main
    format-message = hooks.format_message:main
    search-replace = hooks.search_replace:main
    replace-tabs = hooks.replace_tabs:main
    spellcheck-message = hooks.spellcheck_message:main
    prepare-message = hooks.prepare_message:main
    restore-message = hooks.restore_message:main

[options.packages.find]
exclude =
    build*
    test*

[aliases]
test=pytest

[tool:pytest]
addopts =
    --flake8
    --mypy
filterwarnings =
    error
    # Suppress deprecation warning in flake8
    ignore:SelectableGroups dict interface is deprecated::flake8

[flake8]
max-line-length = 120

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
no_implicit_optional = True

[mypy-tests.*]
disallow_untyped_defs = False

[mypy-setuptools]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-PIL]
ignore_missing_imports = True

[mypy-pillow_avif]
ignore_missing_imports = True

[mypy-scour]
ignore_missing_imports = True

[mypy-autocorrect]
ignore_missing_imports = True

[mypy-pre_commit.*]
ignore_missing_imports = True
